kustomize-petrvs/base/deployment-petrvs-queue.yaml
---
# =====================================================================-
# API Version: apps/v1
# Kind:       Deployment
# Metadata:
#   Name:     petrvs-queue
# ----------------------------------------------------------------------
# Author:     erivandosena@gmail.com
# Created:    2025-04-10
# Version:    1.0.0
# ----------------------------------------------------------------------
# Description: Deployment do sistema de filas da aplicação Petrvs,
#              responsável pelo processamento assíncrono de tarefas.
# ----------------------------------------------------------------------
# Usage:      kubectl apply -f deployment-petrvs-queue.yaml
# =====================================================================-
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petrvs-queue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petrvs-queue
  template:
    metadata:
      labels:
        app: petrvs-queue
    spec:
      securityContext:
        runAsUser: 33
        runAsGroup: 33
        fsGroup: 33
      containers:
      - name: queue-worker
        image: segescginf/pgdpetrvs:2.3.16
        command:
        - /bin/bash
        - -c
        - |
          mkdir -p /var/www/storage/logs
          chown -Rf www-data:www-data /var/www/storage
          chmod -Rf 775 /var/www/storage
          supervisord -c /etc/supervisor/conf.d/horizon.conf
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "400m"
            memory: "512Mi"
        securityContext:
          runAsUser: 0
          runAsGroup: 33
        volumeMounts:
        - name: php-config
          mountPath: /usr/local/etc/php/conf.d/custom-php.ini
          subPath: php.ini
        - name: storage-logs
          mountPath: /var/www/storage
        - name: merged-env
          mountPath: /var/www/.env
          subPath: .env
      volumes:
      - name: storage-logs
        persistentVolumeClaim:
          claimName: petrvs-storage-pvc
      - name: php-config
        configMap:
          name: petrvs-php-config
          items:
          - key: php.ini
            path: php.ini
      - name: merged-env
        emptyDir: {}
